--- a/check.toml
+++ b/check.toml
@@ -8,13 +8,19 @@ github = "LedgerHQ/ledger-live-desktop"
 use_latest_release = true
 prefix = "v"
 
-[cro-chain-maind]
+[ledger-live-bin]
+source = "github"
+github = "LedgerHQ/ledger-live-desktop"
+use_latest_release = true
+prefix = "v"
+
+[cro-chain-maind-bin]
 source = "github"
 github = "crypto-org-chain/chain-main"
 use_latest_release = true
 prefix = "v"
 
-[cro-chain-desktop]
+[cro-chain-desktop-bin]
 source = "github"
 github = "crypto-com/chain-desktop-wallet"
 use_max_tag = true
