--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 *.tgz
 *.zip
 *.AppImage
-*-LICENSE*
-*-README*
 
 # signed sources
 *.asc
@@ -12,6 +10,9 @@
 
 # log files from makepkg --log (or extra-x86_64-build)
 *.log
+
+# downloaded license file
+*/LICENSE*
 
 # subfolders, e.g. source or built package trees, vcs
 */**/
