--- a/check.toml
+++ b/check.toml
@@ -23,5 +23,5 @@ prefix = "v"
 [cro-chain-desktop-bin]
 source = "github"
 github = "crypto-com/chain-desktop-wallet"
-use_max_tag = true
+use_latest_release = true
 prefix = "v"
