--- a/check.toml
+++ b/check.toml
@@ -25,3 +25,9 @@ source = "github"
 github = "crypto-com/chain-desktop-wallet"
 use_latest_release = true
 prefix = "v"
+
+[prey-node-client]
+source = "github"
+github = "prey/prey-node-client"
+use_latest_release = true
+prefix = "v"
