--- a/check.toml
+++ b/check.toml
@@ -31,3 +31,8 @@ source = "github"
 github = "prey/prey-node-client"
 use_latest_release = true
 prefix = "v"
+
+[kaizen]
+source = "regex"
+url = "https://www.elastic-kaizen.com/download.html"
+regex = "5\\.[0-9]+\\.[0-9]+"
