--- a/prey-node-client/PKGBUILD
+++ b/prey-node-client/PKGBUILD
@@ -1,12 +1,14 @@
 # Maintainer: xpt <user.xpt@gmail.com>
+# Contributor: Serge K <arch@phnx47.net>
+
 pkgname=prey-node-client
 pkgver=1.9.10
-pkgrel=1
+pkgrel=2
 pkgdesc="Remote tracking and monitoring application for laptops, smartphones, and other electronic devices"
 url="https://preyproject.com/"
 arch=('x86_64' 'i686')
 license=('GPL3')
-depends=('nodejs' 'mpg123' 'xawtv' 'scrot' 'openssh' 'wireless_tools' 'lsb-release' 'python2' 'pygtk' 'networkmanager' 'npm')
+depends=('nodejs' 'mpg123' 'xawtv' 'scrot' 'openssh' 'wireless_tools' 'lsb-release' 'python2' 'networkmanager' 'npm')
 replaces=('prey-tracker')
 # Should be used as soon as the bash client is renamed
 #provides=('prey-tracker')
