--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,7 +23,7 @@ jobs:
         run: pip install nvchecker
 
       - name: ☢ Check versions
-        run: echo "NEW_VER=(./check.sh)" >> $GITHUB_ENV
+        run: echo "NEW_VER=$(./check.sh)" >> $GITHUB_ENV
 
       - name: ✉ Test
         run: echo ${{ env.NEW_VER }}
