--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -35,6 +35,6 @@ jobs:
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
           subject: AUR - New Versions
-          body: ${{ steps.check_vers.outputs.new_vers | tr ';' '\n' }}
+          body: ${ ${{ steps.check_vers.outputs.new_vers  }} | tr ';' '\n' }
           to: arch@phnx47.net
           from: noreply@phnx47.net
