--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -26,7 +26,7 @@ jobs:
         id: check_vers
         shell: bash
         run: | 
-          out=./check.sh
+          out=$(./check.sh)
           echo $out
           echo "::set-output name=new_vers::${out%$'\n'*}"
 
