--- a/renovate-git/PKGBUILD
+++ b/renovate-git/PKGBUILD
@@ -4,7 +4,7 @@
 
 _pkgname=renovate
 pkgname=renovate-git
-pkgver=24.107.0.r0.gfa6d1e32a
+pkgver=25.28.0.r0.g7eb2c09b6
 pkgrel=1
 pkgdesc="Universal dependency update tool that fits into your workflows."
 arch=(any)
