upgpkg: ledger-live-bin 2.29.0-1
upstream release

--- a/ledger-live-bin/PKGBUILD
+++ b/ledger-live-bin/PKGBUILD
@@ -5,28 +5,29 @@
 
 _pkgbin=ledger-live-desktop
 pkgname=ledger-live-bin
-pkgdesc='Ledger Live - Desktop'
+pkgdesc='Ledger Live - Desktop (AppImage version)'
 license=('MIT')
 url='https://github.com/LedgerHQ/ledger-live-desktop'
-pkgver=2.26.1
+pkgver=2.29.0
 pkgrel=1
 arch=('x86_64')
-package="ledger-live-desktop-${pkgver}-linux-${arch}.AppImage"
 depends=('ledger-udev')
 options=(!strip)
 provides=('ledger-live')
 conflicts=('ledger-live' 'ledger-live-git')
+_package="ledger-live-desktop-${pkgver}-linux-${arch}.AppImage"
 source=(
-  "${package}::${url}/releases/download/v${pkgver}/${package}"
+  "${_package}::${url}/releases/download/v${pkgver}/${_package}"
   "LICENSE::https://raw.githubusercontent.com/LedgerHQ/ledger-live-desktop/v${pkgver}/LICENSE"
 )
-sha512sums=('d0536b41e58d374f7814840930c79aeb8104a16d06c26ffd13d23db94b2b62b564be041929aa0cb6a5bd977d250ff0f9ecd216d48eeb0ea8e025272f74bd8be5'
+sha512sums=('ce45335df820401499b6c6659c368311345f7297c894742110a47406bc0679c81ea8e84d4474ce9bafa1a50f3aa5da4914b3ef64fe0b4109eb0e359b37095a84'
             '915edd51fe7732af57f5a4ca8f4c61c4f435de6357e34ed0733cac8d950d80b3a9e513deac0a3672a07f38ff871a57032a221b3aa27edae8e42cc00586fe3318')
+
 
 build() {
   # Extract files
-  chmod +x "$srcdir/$package"
-  $srcdir/$package --appimage-extract
+  chmod +x "$srcdir/$_package"
+  $srcdir/$_package --appimage-extract
 
   # Correct .desktop
   sed -e "s/AppRun/${_pkgbin}/g" -i "$srcdir/squashfs-root/$_pkgbin.desktop"
