upgpkg: cro-chain-maind-bin 2.1.2-1
upstream release

chore: update var

--- a/cro-chain-maind-bin/PKGBUILD
+++ b/cro-chain-maind-bin/PKGBUILD
@@ -11,9 +11,9 @@ url='https://github.com/crypto-org-chain/chain-main'
 pkgver=2.1.2
 pkgrel=1
 arch=('x86_64')
-package="chain-main_${pkgver}_Linux_${arch}.tar.gz"
+_pkgsrc="chain-main_${pkgver}_Linux_${arch}.tar.gz"
 source=(
-  "${package}::${url}/releases/download/v${pkgver}/${package}"
+  "${_pkgsrc}::${url}/releases/download/v${pkgver}/${_pkgsrc}"
 )
 sha512sums=('51d90ccbfcd21a6fa905d068be9fee5cd91f40c1a04bbe210fbd29bff894b2a641b227025fc6e35cdd7059f2fc9c4cc5043a8f671c9217295b8728ed1bfaec29')
 
