--- a/kaizen/PKGBUILD
+++ b/kaizen/PKGBUILD
@@ -5,12 +5,13 @@
 pkgname=kaizen
 pkgdesc="Kaizen ElasticSearch GUI"
 pkgver=5.715.100
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 url='https://www.elastic-kaizen.com/'
 license=('custom')
 optdepends=('gtk-theme-murrine-collection')
-source=("https://www.elastic-kaizen.com/releases/kaizen-${pkgver}-linux-x64.zip"
+_pkgsrc="${pkgname}-${pkgver}-linux-x64.zip"
+source=("${_pkgsrc}::https://www.elastic-kaizen.com/releases/${_pkgsrc}"
   "kaizen.desktop"
   "LICENSE"
   "kaizen.png")
