--- a/check.toml
+++ b/check.toml
@@ -36,3 +36,8 @@ prefix = "v"
 source = "regex"
 url = "https://www.elastic-kaizen.com/download.html"
 regex = "5\\.[0-9]+\\.[0-9]+"
+
+[dolphin-megasync-bin]
+source = "regex"
+url = "https://mega.nz/linux/MEGAsync/Arch_Extra/x86_64/"
+regex = "dolphin-megasync-([0-9].[0-9].[0-9]-[0-9])"
