--- a/dolphin-megasync-bin/PKGBUILD
+++ b/dolphin-megasync-bin/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=dolphin-megasync-bin
 pkgver=3.6.6
 pkgrel=2
-pkgdesc="Extension for KDE based file managers to interact with Megasync"
+pkgdesc="Managing your MEGA cloud drive using Dolphin file manager."
 arch=('x86_64')
 url="http://mega.nz"
 license=('custom')
@@ -20,6 +20,6 @@ sha512sums=('beacd8d79481ade9dffd51a72d63589249f6ae530bf76576f7e477ffca1fef092b4
             'a41bbe7bf6846f06262e8b8189c6760406ec2114f49af50544201ca9fbed8baac31e69839af69931bbbe7d058e24d6f0f5cc1cd9d9636d56b3eb7b7d9fe44b5a')
 
 package() {
-  cp -R "${srcdir}/usr" "${pkgdir}/"
-  install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  cp -r "${srcdir}/usr" "${pkgdir}/"
+  install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
