--- a/check.toml
+++ b/check.toml
@@ -41,3 +41,9 @@ regex = "5\\.[0-9]+\\.[0-9]+"
 source = "regex"
 url = "https://mega.nz/linux/MEGAsync/Arch_Extra/x86_64/"
 regex = "dolphin-megasync-([0-9].[0-9].[0-9]-[0-9])"
+
+[koofr]
+source = "httpheader"
+regex = "koofr-([a-z0-9]*)-linux"
+url = "https://app.koofr.net/dl/apps/linux64"
+header = "content-disposition"
