--- a/kaizen/PKGBUILD
+++ b/kaizen/PKGBUILD
@@ -4,19 +4,19 @@
 
 pkgname=kaizen
 pkgdesc="Kaizen ElasticSearch GUI"
-pkgver=5.715.100
-pkgrel=2
+pkgver=5.715.101
+pkgrel=1
 arch=('x86_64')
 url='https://www.elastic-kaizen.com/'
 license=('custom')
 optdepends=('gtk-theme-murrine-collection')
 _pkgsrc="${pkgname}-${pkgver}-linux-x64.zip"
-source=("${_pkgsrc}::https://www.elastic-kaizen.com/releases/${_pkgsrc}"
+source=("${_pkgsrc}::https://elastic-kaizen.com/install/${pkgver}/${_pkgsrc}"
   "kaizen.desktop"
   "LICENSE"
   "kaizen.png")
 
-sha512sums=('9163c9954043b389b08be9223cae9ab517759bc9a51499bee932e111ff2834f00490701b151f6d514103007efb120de6befc11497c7eaa40d0b3a65c1c19485d'
+sha512sums=('eeaa9a1732f87bd27277b17da86918941efb01c8ca30dda5983b2a24b2c753a7e77085bd8a39e9797f75a869eeb6c148a521bbddf1971c7544ef31bc0567775d'
             'c7555c9173855402c3d47acc0b624e7ef26018b0f31d20db74eb52afea76b6109bec3d66bf3dad99194917dc9a58f784bc45662aa899f633fd2c7adfea4852d1'
             '35e15a34c425c8af17c1141a35cec0cbea6aba65d01443fb39ceb09ff51bb30ab356192d54b33dfb953ef9ddc6e489e42067358543f129e03f9a0c4f5a041529'
             'a0277b72a04cfa7dad2ae8819fc5a009211bbbb44645cc1b7f73fb66e9473d47d5fa6273dfc977bd6746bc435e5ddc21ba28d3cb03e3f090ae6b5ac82137b913')
