--- a/ledger-live-bin/PKGBUILD
+++ b/ledger-live-bin/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Serge K <arch@phnx47.net>
+# Maintainer: Serge K <serge.arch@zmail.pro>
 # Contributor: Stephen Argent <steve [at] tuxcon [dot] com>
 
 # https://github.com/phnx47/pkgbuilds
