upgpkg: ledger-live 2.44.0-1
upstream release

--- a/ledger-live/PKGBUILD
+++ b/ledger-live/PKGBUILD
@@ -6,38 +6,37 @@
 _pkgbin=ledger-live-desktop
 pkgname=ledger-live
 pkgdesc="Ledger Live - Desktop"
-pkgver=2.42.0
+pkgver=2.44.0
 pkgrel=1
 arch=('x86_64')
-url='https://github.com/LedgerHQ/ledger-live-desktop'
+url='https://github.com/LedgerHQ/ledger-live'
 license=('MIT')
 depends=('ledger-udev')
-makedepends=('git' 'yarn' 'python' 'nodejs>=12')
+makedepends=('git' 'pnpm' 'ruby-bundler' 'python>=3.5' 'nodejs>=16')
 provides=('ledger-live')
 conflicts=('ledger-live-bin' 'ledger-live-git')
-_pkgfolder=${_pkgbin}-${pkgver}
-source=("${_pkgfolder}.tar.gz::https://github.com/LedgerHQ/ledger-live-desktop/archive/v${pkgver}.tar.gz"
-        "ledger-live-desktop.desktop")
-sha512sums=('35b1d81d51bdb8953bda4e09fdc64314915bc0ce72d79fc22fcd0f05a77fed3777e11bdbc253378fd9c056c27aaa64131afb8b65d5d2f1f23e99a03c7d0dec0b'
-            '01bee3b5a90d9a87bb8b1f8edd8fa5851b39db7f9374d0e31114301876fafbc9226b120f114b66a3158a4e98eb514569f34cd0d4f1212062a55d0c8d0e698dda')
-
-prepare() {
-  cd $_pkgfolder
-  export JOBS=max
-  yarn --ignore-scripts
-}
+_pkgfolder=ledger-live--ledgerhq-live-desktop-${pkgver}
+source=(
+  "${_pkgbin}-${pkgver}.tar.gz::https://github.com/LedgerHQ/ledger-live/archive/refs/tags/@ledgerhq/live-desktop@${pkgver}.tar.gz"
+  "ledger-live-desktop.desktop")
+sha512sums=(
+  '7b2657576932028948ce74d5b744f8cd67fb5789fd4fcb5bcaabb6adc7f95b624d56f5698a683709d3566ea8e5069aba0530757c922bdc465d4c7dae033ccdd8'
+  '01bee3b5a90d9a87bb8b1f8edd8fa5851b39db7f9374d0e31114301876fafbc9226b120f114b66a3158a4e98eb514569f34cd0d4f1212062a55d0c8d0e698dda'
+)
 
 build() {
   cd $_pkgfolder
   export GIT_REVISION=$pkgver
   export JOBS=max
-  yarn dist
+  pnpm i --filter="ledger-live-desktop..." --filter="ledger-live" --frozen-lockfile --unsafe-perm
+  pnpm build:lld:deps
+  pnpm desktop build
 }
 
 package() {
   install -Dm644 "${_pkgbin}.desktop" "${pkgdir}/usr/share/applications/${_pkgbin}.desktop"
 
-  cd $_pkgfolder
+  cd $_pkgfolder/apps/$_pkgbin/
 
   install -dm755 "${pkgdir}/opt"
   cp -r "dist/linux-unpacked" "${pkgdir}/opt/${_pkgbin}"
@@ -46,7 +45,7 @@ package() {
 
   install -Dm644 "build/icons/icon.png" "${pkgdir}/usr/share/icons/hicolor/64x64/apps/${_pkgbin}.png"
   install -Dm644 "build/icons/icon@128x128.png" "${pkgdir}/usr/share/icons/hicolor/128x128/apps/${_pkgbin}.png"
-  install -Dm644 "build/icons/icon@256x256.png" "${pkgdir}/usr/share/icons/hicolor/256x256/apps/${_pkgbin}.png"  
+  install -Dm644 "build/icons/icon@256x256.png" "${pkgdir}/usr/share/icons/hicolor/256x256/apps/${_pkgbin}.png"
   install -Dm644 "build/icons/icon@512x512.png" "${pkgdir}/usr/share/icons/hicolor/512x512/apps/${_pkgbin}.png"
   install -Dm644 "build/icons/icon@1024x1024.png" "${pkgdir}/usr/share/icons/hicolor/1024x1024/apps/${_pkgbin}.png"
 
