--- a/check.toml
+++ b/check.toml
@@ -8,3 +8,44 @@ github = "LedgerHQ/ledger-live"
 use_max_tag = true
 include_regex = "@ledgerhq/live-desktop@([0-9]+\\.[0-9]+\\.[0-9]+)"
 prefix = "@ledgerhq/live-desktop@"
+
+[ledger-live-bin]
+source = "httpheader"
+url = "https://download.live.ledger.com/latest/linux"
+regex = "([0-9]+\\.[0-9]+\\.[0-9]+)"
+header = "location"
+
+[cro-chain-maind-bin]
+source = "github"
+github = "crypto-org-chain/chain-main"
+use_latest_release = true
+prefix = "v"
+
+[cro-chain-desktop]
+source = "github"
+github = "crypto-com/chain-desktop-wallet"
+use_latest_release = true
+prefix = "v"
+
+[cro-chain-desktop-bin]
+source = "github"
+github = "crypto-com/chain-desktop-wallet"
+use_latest_release = true
+prefix = "v"
+
+[prey-node-client]
+source = "github"
+github = "prey/prey-node-client"
+use_latest_release = true
+prefix = "v"
+
+[kaizen]
+source = "regex"
+url = "https://www.elastic-kaizen.com/download.html"
+regex = "6\\.[0-9]+\\.[0-9]+"
+
+[koofr]
+source = "httpheader"
+regex = "koofr-([a-z0-9]*)-linux"
+url = "https://app.koofr.net/dl/apps/linux64"
+header = "content-disposition"
