--- a/cro-chain-desktop-bin/PKGBUILD
+++ b/cro-chain-desktop-bin/PKGBUILD
@@ -8,8 +8,8 @@ pkgname=cro-chain-desktop-bin
 pkgdesc='Crypto.com DeFi Desktop Wallet (AppImage version)'
 license=('Apache')
 url='https://github.com/crypto-com/chain-desktop-wallet'
-pkgver=1.0.0
-pkgrel=2
+pkgver=1.1.1
+pkgrel=1
 arch=('x86_64')
 provides=('cro-chain-desktop')
 conflicts=('cro-chain-desktop')
@@ -18,10 +18,8 @@ source=(
   "${_pkgsrc}::${url}/releases/download/v${pkgver}/${_pkgsrc}"
   "LICENSE::https://raw.githubusercontent.com/crypto-com/chain-desktop-wallet/v${pkgver}/LICENSE"
 )
-sha512sums=(
-  '9ac294daca7b1b5eeed84cc8a38a5a08a639c97d2cdde4eda89fd620fd2c3ef00103c4c2e3177652d7859cdeb04cc90fe23c2e140ed8648457a84113e3a450de'
-  'b3bbf467b6a12a5d3cdb8af3b0459d6017dc9e2f56d0b024b522d3bb0689fc9cb48cca4f44d93c934ab90b8b8b18e6bcb0b93a81c86c0e54e114db0ad0e34207'
-)
+sha512sums=('256d668c7645aab22eef786942141922079974086180863467077ffd31864f990380037c37258e8f80cb01d208dfec59525610bb82c1996eee23b268f53fdb4a'
+            'b3bbf467b6a12a5d3cdb8af3b0459d6017dc9e2f56d0b024b522d3bb0689fc9cb48cca4f44d93c934ab90b8b8b18e6bcb0b93a81c86c0e54e114db0ad0e34207')
 
 build() {
   # Extract files
