upgpkg: cro-chain-desktop-bin 1.3.2-2

--- a/cro-chain-desktop-bin/PKGBUILD
+++ b/cro-chain-desktop-bin/PKGBUILD
@@ -9,42 +9,41 @@ pkgdesc='Crypto.com DeFi Desktop Wallet (AppImage version)'
 license=('Apache')
 url='https://github.com/crypto-com/chain-desktop-wallet'
 pkgver=1.3.2
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 provides=('cro-chain-desktop')
 conflicts=('cro-chain-desktop')
 _pkgsrc="Crypto.com-DeFi-Desktop-Wallet-${pkgver}.AppImage"
-source=(
-  "${_pkgsrc}::${url}/releases/download/v${pkgver}/${_pkgsrc}"
-  "LICENSE::https://raw.githubusercontent.com/crypto-com/chain-desktop-wallet/v${pkgver}/LICENSE"
+source=("${_pkgsrc}::${url}/releases/download/v${pkgver}/${_pkgsrc}"
+        "LICENSE::https://raw.githubusercontent.com/crypto-com/chain-desktop-wallet/v${pkgver}/LICENSE"
 )
 sha512sums=('a5b85e3672e75693afa662a59d9d949069ac34e09aaaae6296fc4e1f3e05280490aa44e36ba5cc3fc5af192134e1f60844ab1f226cdb60bda2703706d883be30'
-            'e21a90ebc22283c19f4535f263a0297a2428633572ddf19ec515496bd33fe70eacf3c3de63395307cd268330e8325b80e985190b2e92bbbf0079440aa84e89ea')
+            'e21a90ebc22283c19f4535f263a0297a2428633572ddf19ec515496bd33fe70eacf3c3de63395307cd268330e8325b80e985190b2e92bbbf0079440aa84e89ea'
+)
 
 build() {
   # Extract files
   chmod +x "$srcdir/$_pkgsrc"
   $srcdir/$_pkgsrc --appimage-extract
 
-  # Correct .desktop, icon
-  mv -f "$srcdir/squashfs-root/usr/share/icons/hicolor/0x0" "$srcdir/squashfs-root/usr/share/icons/hicolor/512x512"
+  # Correct .desktop
   sed -e "s/AppRun/${_pkgbin}/g" -i "$srcdir/squashfs-root/$_pkgbin.desktop"
 }
 
 package() {
   install -d "$pkgdir/opt/$_pkgname"
   cp -a "$srcdir/squashfs-root/." "$pkgdir/opt/$_pkgname/"
-  rm -rf "${pkgdir}/opt/${_pkgname}/usr/share"
-  rm -f "${pkgdir}/opt/${_pkgname}/chain-desktop-wallet.png"
 
   install -d "$pkgdir/usr/bin"
   ln -s "/opt/$_pkgname/$_pkgbin" "$pkgdir/usr/bin/$_pkgbin"
 
-  install -d "$pkgdir/usr/share"
-  cp -r "$srcdir/squashfs-root/usr/share/." "${pkgdir}/usr/share/"
+  install -d "$pkgdir/usr/share/applications"
+  ln -s "/opt/$_pkgname/$_pkgbin.desktop" "$pkgdir/usr/share/applications/$_pkgbin.desktop"
+
+  install -d "$pkgdir/usr/share/icons/hicolor/512x512/apps"
+  ln -s "/opt/$_pkgname/usr/share/icons/hicolor/0x0/apps/${_pkgbin}.png" "${pkgdir}/usr/share/icons/hicolor/512x512/apps/${_pkgbin}.png"
 
   find "$pkgdir" -type d -exec chmod 755 {} +
 
-  install -Dm644 "$srcdir/squashfs-root/$_pkgbin.desktop" "$pkgdir/usr/share/applications/$_pkgbin.desktop"
   install -Dm644 "$srcdir/LICENSE" "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
