--- a/cro-chain-desktop/PKGBUILD
+++ b/cro-chain-desktop/PKGBUILD
@@ -8,21 +8,18 @@ pkgdesc='Crypto.com DeFi Desktop Wallet'
 license=('Apache')
 url='https://github.com/crypto-com/chain-desktop-wallet'
 pkgver=1.3.2
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 makedepends=('git' 'yarn' 'nodejs<17')
 provides=('cro-chain-desktop')
 conflicts=('cro-chain-desktop-bin')
-_pkgfolder=${_pkgbin}-${pkgver}
-source=(
-  "${_pkgfolder}.tar.gz::https://github.com/crypto-com/chain-desktop-wallet/archive/refs/tags/v${pkgver}.tar.gz"
-  "chain-desktop-wallet.desktop"
-)
+source=("${_pkgbin}-${pkgver}.tar.gz::https://github.com/crypto-com/chain-desktop-wallet/archive/refs/tags/v${pkgver}.tar.gz"
+        "chain-desktop-wallet.desktop")
 sha512sums=('5e185aaa3795a6d904814a035fdc5de84b7130040d386a790165e69b03fbb79d92c9ea457a168363367c5e4fef5f2cf4416070b5bb3815e5f514f897d1924409'
-            'b5e9f80e5723c252ecb0cbf8dfd3689f56f937ab44186d64fea373c51de6ba5ac91f14dd9e04d1df452a9ee2296c34e4ec44bbdb9594eb113b8ab179d274141e')
+            '969ee0790310790bba17d35988270ecb16b3709ff1b897ce0e9e10f612a82e687e6212343c64074839029637e895586374e4ece1219e77addaa7d20e93678924')
 
 build() {
-  cd $_pkgfolder
+  cd ${_pkgbin}-${pkgver}
 
   yarn install
   yarn electron:build
@@ -31,7 +28,7 @@ build() {
 package() {
   install -Dm644 "${_pkgbin}.desktop" "${pkgdir}/usr/share/applications/${_pkgbin}.desktop"
 
-  cd $_pkgfolder
+  cd ${_pkgbin}-${pkgver}
 
   install -dm755 "${pkgdir}/opt"
   cp -r "dist/linux-unpacked" "${pkgdir}/opt/${_pkgbin}"
@@ -40,5 +37,5 @@ package() {
 
   install -Dm644 "build/icon.png" "${pkgdir}/usr/share/icons/hicolor/512x512/apps/${_pkgbin}.png"
 
-  install -Dm644 LICENSE "$pkgdir/usr/share/licenses/${pkgname}/LICENSE"
+  install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
