upgpkg: cro-chain-maind-bin 3.3.7-1
upstream release

--- a/cro-chain-maind-bin/PKGBUILD
+++ b/cro-chain-maind-bin/PKGBUILD
@@ -8,18 +8,15 @@ pkgname=cro-chain-maind-bin
 pkgdesc='Crypto.org Chain CLI'
 license=('Apache')
 url='https://github.com/crypto-org-chain/chain-main'
-pkgver=3.3.5
+pkgver=3.3.7
 pkgrel=1
 arch=('x86_64')
-_pkgsrc="chain-main_${pkgver}_Linux_${arch}.tar.gz"
-source=(
-  "${_pkgsrc}::${url}/releases/download/v${pkgver}/${_pkgsrc}"
-)
-sha512sums=('9a832a0a1b3f4a98e073e6625ebcdc1d3699761add4b5b0e54632300dfd5874b9c82e017b097a5347bdda2b7029d08d89340ccfb6dec8c38996f6945ec45860f')
-
+_targz="chain-main_${pkgver}_Linux_${arch}.tar.gz"
+source=("${_targz}::${url}/releases/download/v${pkgver}/${_targz}")
+sha512sums=('41919471f5f3b3add4fafc43a843943150e4415435aecb771f55778ebc808918c46b362bff737d6a33c37e8f28937d37f600f3650847fc8d7704fe1bdd20d314')
 
 package() {
   cd "$srcdir/"
   install -Dm755 "bin/${_pkgbin}" "${pkgdir}/usr/bin/${_pkgbin}"
-  install -Dm644 "LICENSE" "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  install -Dm644 "LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
