--- a/.editorconfig
+++ b/.editorconfig
@@ -6,4 +6,5 @@ indent_style = space
 end_of_line = lf
 charset = utf-8
 max_line_length = 160
-insert_final_newline =  true
+insert_final_newline = true
+trim_trailing_whitespace = true
