--- a/ledger-live-bin/PKGBUILD
+++ b/ledger-live-bin/PKGBUILD
@@ -8,41 +8,48 @@ pkgname=ledger-live-bin
 pkgdesc='Ledger Live - Desktop (AppImage version)'
 license=('MIT')
 url='https://www.ledger.com/ledger-live'
-pkgver=2.49.0
+pkgver=2.49.2
 pkgrel=1
 arch=('x86_64')
 depends=('ledger-udev')
 options=(!strip)
 provides=('ledger-live')
 conflicts=('ledger-live' 'ledger-live-git')
-_pkgsrc="ledger-live-desktop-${pkgver}-linux-${arch}.AppImage"
-source=("${_pkgsrc}::https://download.live.ledger.com/${_pkgsrc}"
-        "LICENSE::https://raw.githubusercontent.com/LedgerHQ/ledger-live/main/apps/ledger-live-desktop/LICENSE"
-)
-sha512sums=('b17a95ab6de27aa177c3e2321ab0d301bcc683c7cb7a2dffbfbcf827d7e40aacb2a3d941a8496d2707e438b60925cf70d32598a113519108b750b8fbbca1d04b'
+_appimg="ledger-live-desktop-${pkgver}-linux-${arch}.AppImage"
+source=("${_appimg}::https://download.live.ledger.com/${_appimg}"
+        "LICENSE::https://raw.githubusercontent.com/LedgerHQ/ledger-live/main/apps/ledger-live-desktop/LICENSE")
+sha512sums=('abffeb467f70045221a42768c103234f5c39344b3a28af18c0e85ddad1d0df404fa7e4e487e4f1651b85f0851f03ac8cc30ab697453ae32dde8eeaf9c5ff9465'
             '915edd51fe7732af57f5a4ca8f4c61c4f435de6357e34ed0733cac8d950d80b3a9e513deac0a3672a07f38ff871a57032a221b3aa27edae8e42cc00586fe3318')
 
 build() {
   # Extract files
-  chmod +x "$srcdir/$_pkgsrc"
-  $srcdir/$_pkgsrc --appimage-extract
+  chmod +x "${srcdir}/${_appimg}"
+  ${srcdir}/$_appimg --appimage-extract
 
   # Correct .desktop
-  sed -e "s/AppRun/${_pkgbin}/g" -i "$srcdir/squashfs-root/$_pkgbin.desktop"
+  sed -e "s/AppRun/${_pkgbin}/g" -i "${srcdir}/squashfs-root/${_pkgbin}.desktop"
 }
 
 package() {
-  install -d "$pkgdir/opt/$_pkgbin"
-  cp -a "$srcdir/squashfs-root/." "$pkgdir/opt/$_pkgbin/"
+  install -d "${pkgdir}/opt/${_pkgbin}"
+  cp -a "${srcdir}/squashfs-root/." "${pkgdir}/opt/${_pkgbin}/"
 
-  install -d "$pkgdir/usr/bin"
-  ln -s "/opt/$_pkgbin/$_pkgbin" "$pkgdir/usr/bin/$_pkgbin"
+  install -d "${pkgdir}/usr/bin"
+  ln -s "/opt/${_pkgbin}/${_pkgbin}" "${pkgdir}/usr/bin/${_pkgbin}"
 
-  install -d "$pkgdir/usr/share"
-  cp -r "$srcdir/squashfs-root/usr/share/." "${pkgdir}/usr/share/"
+  install -d "${pkgdir}/usr/share/applications"
+  ln -s "/opt/${_pkgbin}/${_pkgbin}.desktop" "${pkgdir}/usr/share/applications/${_pkgbin}.desktop"
 
-  find "$pkgdir" -type d -exec chmod 755 {} +
+  install -d "${pkgdir}/usr/share/icons/hicolor/128x128/apps"
+  install -d "${pkgdir}/usr/share/icons/hicolor/256x256/apps"
+  install -d "${pkgdir}/usr/share/icons/hicolor/512x512/apps"
+  install -d "${pkgdir}/usr/share/icons/hicolor/1024x1024/apps"
+  ln -s "/opt/${_pkgbin}/usr/share/icons/hicolor/128x128/apps/${_pkgbin}.png"  "${pkgdir}/usr/share/icons/hicolor/128x128/apps/${_pkgbin}.png"
+  ln -s "/opt/${_pkgbin}/usr/share/icons/hicolor/256x256/apps/${_pkgbin}.png"  "${pkgdir}/usr/share/icons/hicolor/256x256/apps/${_pkgbin}.png"
+  ln -s "/opt/${_pkgbin}/usr/share/icons/hicolor/512x512/apps/${_pkgbin}.png"  "${pkgdir}/usr/share/icons/hicolor/512x512/apps/${_pkgbin}.png"
+  ln -s "/opt/${_pkgbin}/usr/share/icons/hicolor/1024x1024/apps/${_pkgbin}.png"  "${pkgdir}/usr/share/icons/hicolor/1024x1024/apps/${_pkgbin}.png"
 
-  install -Dm644 "$srcdir/squashfs-root/$_pkgbin.desktop" "$pkgdir/usr/share/applications/$_pkgbin.desktop"
-  install -Dm644 "$srcdir/LICENSE" "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  find "${pkgdir}" -type d -exec chmod 755 {} +
+
+  install -Dm644 "${srcdir}/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
