build: renovate-git fix install deps

--- a/renovate-git/PKGBUILD
+++ b/renovate-git/PKGBUILD
@@ -5,7 +5,7 @@
 
 _pkgname=renovate
 pkgname=${_pkgname}-git
-pkgver=34.54.2.r0.gaab5fc38db
+pkgver=34.146.0.r2.g35baf4aaa0
 pkgrel=1
 pkgdesc="Renovate - Dependency update tool (git-latest)"
 arch=(any)
@@ -19,28 +19,29 @@ sha256sums=('SKIP')
 
 build() {
   cd "${pkgname}"
+
   yarn version --no-git-tag-version --new-version "$(git describe --abbrev=0 --tags)"
-  yarn install --frozen-lockfile
+  yarn install --frozen-lockfile --ignore-engines
   yarn build
+
+  # 'yarn install --prod' will prune dev packages
+  yarn install --prod --frozen-lockfile --ignore-engines
 }
 
 package() {
   cd "${pkgname}"
 
   install -dm755 "${pkgdir}/usr/lib/node_modules/${_pkgname}"
-  cp -r "dist" "${pkgdir}/usr/lib/node_modules/${_pkgname}/dist"
-  cp -r "package.json" "${pkgdir}/usr/lib/node_modules/${_pkgname}"
-  cp -r "renovate-schema.json" "${pkgdir}/usr/lib/node_modules/${_pkgname}"
+  cp -r "dist" "${pkgdir}/usr/lib/node_modules/${_pkgname}"
+  cp -r "node_modules" "${pkgdir}/usr/lib/node_modules/${_pkgname}"
+  cp "package.json" "${pkgdir}/usr/lib/node_modules/${_pkgname}"
+  cp "renovate-schema.json" "${pkgdir}/usr/lib/node_modules/${_pkgname}"
 
   chmod 775 "${pkgdir}/usr/lib/node_modules/${_pkgname}/dist/renovate.js"
   chmod 775 "${pkgdir}/usr/lib/node_modules/${_pkgname}/dist/config-validator.js"
 
   install -dm755 "${pkgdir}/usr/bin"
-  ln -s "/usr/lib/node_modules/${_pkgname}/dist/renovate.js" "${pkgdir}/usr/bin/$_pkgname"
-
-  cd "${pkgdir}/usr/lib/node_modules/${_pkgname}"
-  yarn install --prod
-  find "node_modules" -type d -exec chmod 755 {} +
+  ln -s "/usr/lib/node_modules/${_pkgname}/dist/renovate.js" "${pkgdir}/usr/bin/${_pkgname}"
 }
 
 pkgver() {
