ci: solidity add check ver

--- a/check.toml
+++ b/check.toml
@@ -60,6 +60,12 @@ github = "prey/prey-node-client"
 use_latest_release = true
 prefix = "v"
 
+[solidity]
+source = "github"
+github = "ethereum/solidity"
+use_latest_release = true
+prefix = "v"
+
 [xawtv]
 source = "git"
 git = "https://git.linuxtv.org/xawtv3.git"
